cmake_minimum_required(VERSION 2.8)
project( bswisard )
find_package( OpenCV REQUIRED )
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -DOMP")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -DOMP")
endif()
add_executable( bswisard main.cpp colorproc.cpp wisard.cpp wnet_lib.cpp pixel_lib.cpp cv_util.cpp comparator.cpp )
target_link_libraries( bswisard ${OpenCV_LIBS} )
